# griddy-archive-manager

./: .gitignore  CLAUDE.md  README.md  manage.py  pyproject.toml  renovate.json  seed-nfl-seasons.sh  zensical.toml
.claude/: settings.json
.github/actions/setup-python-ci-env/: action.yml
.github/workflows/: ci.yml  linting.yml  quality-gates.yml  unit_tests.yml
archive/: admin.py  models.py  scrapers.py  tests.py  utils.py
archive/fixtures/: 2025_week_1_games.json  franchises.json  games.json  leagues.json  nfl_teams.json  org_units.json  school_colors.json  seasons.json  team_affiliations.json  team_venue_occupancies.json  teams.json  venues.json  weekly_game_details.json  wtf.json
archive/fixtures/example_nfl_game_data/: 2025_wk_1_game_1.json  2025_wk_1_game_10.json  2025_wk_1_game_11.json  2025_wk_1_game_12.json  2025_wk_1_game_13.json  2025_wk_1_game_14.json  2025_wk_1_game_15.json  2025_wk_1_game_16.json  2025_wk_1_game_2.json  2025_wk_1_game_3.json  2025_wk_1_game_4.json  2025_wk_1_game_5.json  2025_wk_1_game_6.json  2025_wk_1_game_7.json  2025_wk_1_game_8.json  2025_wk_1_game_9.json  complete_game_1.json  complete_game_10.json  complete_game_11.json  complete_game_12.json  complete_game_13.json  complete_game_14.json  complete_game_15.json  complete_game_16.json  complete_game_2.json  (+9 more)
archive/management/: scrapegames.py
archive/migrations/: 0001_initial.py  0002_gamecompleteness.py  0003_rename_name_league_long_name_league_short_name.py  0004_rename_name_orgunit_long_name_orgunit_short_name.py  0005_remove_orgunit_uniq_orgunit_scope_team_logo_and_more.py  0006_venue_capacity.py  0007_venue_uniq_venue_city_state.py  0008_alter_team_logo.py  0009_alter_game_week.py  0010_teamvenueoccupancy.py  0011_add_related_names_to_teamvenueoccupancy.py  0012_game_ordinal.py  0013_team_alternate_name.py  0014_team_additional_colors_team_bonus_data.py  0015_acquisition_bonus_data_assettag_bonus_data_and_more.py  0016_alter_league_country_alter_team_country_and_more.py  0017_acquisition_external_ids_assettag_external_ids_and_more.py  0018_alter_team_state.py  0019_alter_venue_state.py  0020_game_broadcast_channel_game_kickoff_utc_game_status_and_more.py  0021_alter_gamereplay_title.py  0022_alter_gamereplay_thumbnail_url.py  0023_add_franchise_model.py  0024_populate_franchises.py
archive/scrapers/: __init__.py  base.py
docs/: architecture.md  commands.md  getting-started.md  index.md
docs/reference/: index.md  models.md  scrapers.md
gam/: asgi.py  settings.py  settings_ci.py  urls.py  wsgi.py
tests/: test_dependency_constraints.py  test_documentation.py
(+12 files in other folders)
