[project]
name = "griddy-archive-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.1",
    "django-debug-toolbar>=6.2.0",
    "django-extensions>=4.1",
    "ipython>=9.10.0",
    "psycopg>=3.3.2",
    "requests>=2.32.5",
]
